[package]
name = "n64rom"
version = "0.0.1"
authors = ["Jay Oster <jay@kodewerx.org>"]
repository = "https://github.com/saneki/n64rom-rs"
description = "Library & tools for working with Nintendo 64 ROMs"
license = "MIT"
categories = ["command-line-utilities", "embedded"]
keywords = ["cli", "nintendo", "n64"]
edition = "2018"

[dependencies]
byteorder = "1.3"
crc32fast = "1.2"
failure = "0.1"
failure_derive = "0.1"
itertools = "0.8"
