[package]
name = "n64rom"
version = "0.1.0"
authors = ["saneki <s@neki.me>", "Jay Oster <jay@kodewerx.org>"]
repository = "https://github.com/saneki/n64rom-rs"
description = "Library & tools for working with Nintendo 64 ROMs"
license = "MIT"
categories = ["command-line-utilities", "embedded"]
keywords = ["cli", "nintendo", "n64"]
edition = "2018"

[dependencies]
byteorder = "1.4"
clap = { version = "2.33", optional = true }
crc32fast = "1.2"
itertools = "0.10"
static_assertions = "1.1"
thiserror = "1.0"

[features]
n64romtool = ["clap"]

[[bin]]
name = "n64romtool"
path = "src/bin/n64romtool.rs"
required-features = ["n64romtool"]
